# Copyright (c) 2021-2022 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/ohos.gni")
import("//foundation/multimedia/audio_framework/multimedia_aafwk.gni")

ohos_shared_library("audio_ringtone_client") {
  sanitize = {
    cfi = true
    debug = false
    blocklist = "//foundation/multimedia/audio_framework/cfi_blocklist.txt"
  }
  install_enable = true
  sources = [ "audio_ringtone_manager.cpp" ]

  include_dirs = [
    "//foundation/multimedia/audio_framework/interfaces/inner_api/native/audioringtone/include",
    "//foundation/multimedia/audio_framework/frameworks/native/ringtoneplayer/include",
    "//foundation/multimedia/audio_framework/services/audio_service/client/include",
    "//foundation/multimedia/audio_framework/interfaces/inner_api/native/audiocommon/include",
    "//foundation/multimedia/media_library/interfaces/inner_api/media_library_helper/include",
    "//foundation/multimedia/media_library/frameworks/utils/include",
  ]

  deps = [
    "${ability_runtime_path}/frameworks/native/ability/native:data_ability_helper",
    "${ability_runtime_path}/frameworks/native/appkit:appkit_native",
    "//foundation/graphic/graphic_2d/frameworks/surface:surface",
    "//foundation/multimedia/player_framework/interfaces/inner_api/native:media_client",
  ]

  external_deps = [
    "ability_base:want",
    "ability_base:zuri",
    "ability_runtime:ability_manager",
    "ability_runtime:abilitykit_native",
    "bundle_framework:appexecfwk_base",
    "hiviewdfx_hilog_native:libhilog",
    "relational_store:native_dataability",
    "relational_store:native_rdb",
  ]

  cflags = [
    "-Wall",
    "-Werror",
  ]

  subsystem_name = "multimedia"
  part_name = "multimedia_player_framework"
}
